@@ -1,3 +1,7 @@
+Thu Jun 17 10:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* gtkchequer.c, gtkgamelist.c: Fixes for styles in gamelist
+
 Wed Jun 16 12:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* gtkchequer.c, gtkboard.c, gnubg.gtkrc: separate styles for current
